<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
     This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options.
-->

<resources>

    <!-- Simple strings. -->
    <string name="irontest_app_label">IronTest</string>
    <string name="products_activity_label">Products</string>
    <string name="test_cases_activity_label">Test Cases</string>
    <string name="action_refresh">Refresh</string>
    <string name="test_case_activity_label">Test Case</string>
    <string name="results_title">Results</string>
    <string name="action_add_result">Add Result…</string>
    <string name="add_result_label">New Result</string>
    <string name="passed_button_label">Passed</string>
    <string name="failed_button_label">Failed</string>
    <string name="comment_label">Comment</string>
    <string name="your_name">Your Name</string>

</resources>